syntax = "proto3";

package bluetooth.hci;

import "google/protobuf/empty.proto";

service HciLayerFacade {
  rpc SendCommandWithComplete(Command) returns (google.protobuf.Empty) {}
  rpc SendCommandWithStatus(Command) returns (google.protobuf.Empty) {}

  rpc RequestEvent(EventRequest) returns (google.protobuf.Empty) {}
  rpc StreamEvents(google.protobuf.Empty) returns (stream Event) {}

  rpc RequestLeSubevent(EventRequest) returns (google.protobuf.Empty) {}
  rpc StreamLeSubevents(google.protobuf.Empty) returns (stream LeSubevent) {}

  rpc SendAcl(AclPacket) returns (google.protobuf.Empty) {}
  rpc StreamAcl(google.protobuf.Empty) returns (stream AclPacket) {}
}

message Command {
  bytes payload = 1;
}

message Event {
  bytes payload = 1;
}

message LeSubevent {
  bytes payload = 1;
}

message AclPacket {
  uint32 handle = 1;
  uint32 packet_boundary_flag = 2;
  uint32 broadcast_flag = 3;
  bytes data = 4;
}

message EventRequest {
  uint32 code = 1;
}
